# autodoc-test

./: Cargo.toml  README.md
.docs/: _structure.yaml  book.toml  concepts.yaml
.docs/book/: 404.html  index.html  print.html  searchindex.js  toc.html  toc.js  セッション管理.html  タグ.html  ハンドルネーム.html
.docs/src/: SUMMARY.md  index.md  セッション管理.md  タグ.md  ハンドルネーム.md
.github/scripts/: generate_docs.py
.github/workflows/: generate-concept-docs.yml  generate-docs.yml
config/: development.toml  production.toml
docs/: generated.md
src/: main.rs
src/agent/: agent.rs
src/domain/: entities.rs  repositories.rs  services.rs
src/interface/repositories/: sqlx_repository.rs
src/presentation/web/: api.rs
src/shared/: config.rs  error.rs  mod.rs
src/usecase/: agent_management.rs  learning_management.rs  mod.rs  task_management.rs
tests/integration/: api_test.rs
tests/unit/: agent_management_test.rs
